force-app/main/default/objects/Available_Course__c/Available_Course__c.object-meta.xml
<CustomObject>
    <label>Available Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>