force-app/main/default/objects/Available_Course__c/fields/Course_Number__c.field-meta.xml
<CustomField>
    <fullName>Course_Number__c</fullName>
    <label>Course Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>