force-app/main/default/objects/Available_Course__c/fields/credits__c.field-meta.xml
<CustomField>
    <fullName>credits__c</fullName>
    <label>credits</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>