force-app/main/default/objects/Available_Course__c/fields/Professor_Name__c.field-meta.xml
<CustomField>
    <fullName>Professor_Name__c</fullName>
    <label>Professor Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>