force-app/main/default/objects/Available_Course__c/fields/Total_No_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Students__c</fullName>
    <label>Total No. of Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>