force-app/main/default/objects/Available_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Number__c</columns>
    <columns>Professor_Name__c</columns>
    <columns>credits__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>